# hsa-ai

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AI평가_피드백_반영노트.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  workflow.md
.github/workflows/: ci.yml  deploy.yml
app/: main.py
app/api/: routes.py
app/boundaries/: __init__.py  document_loader.py  llm_client.py  policy_retriever.py
app/docs/policies/: exchange-refund.md  product.md  response-tone.md  shipping.md
app/services/: __init__.py  classify_inquiry.py  decide_auto_reply.py  generate_rag_draft.py
app/workflow/: process_inquiry.py
docs/: README.md  api-contract-v2.md  architecture.md  framework-decision.md  local-setup.md  policy-rag-strategy.md  quality-handoff.md  rag-implementation-plan.md  rag-rerank-latency-report.md  workflow-handoff.md
evals/: classify_runner.py  grader.py  main.py  report.py  runner.py  tasks.json
harness/: AGENTS.md  CLAUDE.md  CODEX.md  README.md
schemas/: __init__.py  auto_reply.py  base.py  inquiry.py  process_result.py  rag_draft.py
scripts/: check_retriever.py
storage/: default__vector_store.json  docstore.json  index_store.json
tests/: conftest.py
tests/integration/: test_process_endpoint.py
tests/unit/: test_classify_eval.py  test_classify_inquiry.py  test_decide_auto_reply.py  test_generate_rag_draft.py  test_inquiry.py  test_llm_client.py  test_policy_retriever.py  test_process_inquiry.py
